--- a/led.html
+++ b/led.html
@@ -18,22 +18,22 @@
         </section>
         <section class="leds">
             <div class="led">
-                <img src="img/led-off.png" alt="image" class="led-img" id="dapurLedImg">
+                <img src="/img/led-off.png" alt="image" class="led-img" id="dapurLedImg">
                 <p class="led-location-text">DAPUR</p>
                 <button class="led-submit" id="ledDapur" onclick="setDapurLed()">TURN ON</button>
             </div>
             <div class="led">
-                <img src="img/led-off.png" alt="image" class="led-img" id="tamuLedImg">
+                <img src="/img/led-off.png" alt="image" class="led-img" id="tamuLedImg">
                 <p class="led-location-text">RUANG TAMU</p>
                 <button class="led-submit" id="ledTamu" onclick="setTamuLed()">TURN ON</button>
             </div>
             <div class="led">
-                <img src="img/led-off.png" alt="image" class="led-img" id="makanLedImg">
+                <img src="/img/led-off.png" alt="image" class="led-img" id="makanLedImg">
                 <p class="led-location-text">RUANG MAKAN</p>
                 <button class="led-submit" id="ledMakan" onclick="setMakanLed()">TURN ON</button>
             </div>
             <div class="led">
-                <img src="img/led-off.png" alt="image" class="led-img" id="toiletLedImg">
+                <img src="/img/led-off.png" alt="image" class="led-img" id="toiletLedImg">
                 <p class="led-location-text">TOILET</p>
                 <button class="led-submit" id="ledToilet" onclick="setToiletLed()">TURN ON</button>
             </div>
