--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         </section>
         <section class="items">
             <div class="item">
-                <img src="img/led-on.png" alt="image" class="item-img">
+                <img src="/img/led-on.png" alt="image" class="item-img">
                 <button class="item-submit" onclick="location.href ='led.html'">LED CONTROL</button>
             </div>
             <div class="item">
-                <img src="img/fan.png" alt="image" class="item-img">
+                <img src="/img/fan.png" alt="image" class="item-img">
                 <button class="item-submit">FAN CONTROL</button>
             </div>
             <div class="item">
-                <img src="img/wip.png" alt="image" class="item-img">
+                <img src="/img/wip.png" alt="image" class="item-img">
                 <button class="item-submit">ONGOING</button>
             </div>
         </section>
